# IT3105_Project2

./: .gitignore  Demo.ipynb  MCTS test.ipynb  TOPP.ipynb  Train_agent.ipynb  Untitled.ipynb  play.ipynb  setup.py
demo11/: 0.h5  125.h5  150.h5  175.h5  200.h5  225.h5  25.h5  250.h5  275.h5  325.h5  350.h5  375.h5  400.h5  425.h5  450.h5  475.h5  50.h5  500.h5  75.h5  _critic_0.h5  _critic_125.h5  _critic_150.h5  _critic_175.h5  _critic_200.h5  _critic_225.h5  _critic_25.h5  _critic_250.h5  _critic_275.h5  _critic_325.h5  _critic_350.h5  _critic_375.h5  _critic_400.h5  _critic_425.h5  _critic_450.h5  _critic_475.h5  _critic_50.h5  _critic_75.h5  checkpointActor0.h5  checkpointActor299.h5  checkpointActor99.h5  (+3 more)
demo_models/: 0.h5  10.h5  12.h5  15.h5  20.h5  3.h5  5.h5  6.h5  9.h5  _critic_0.h5  _critic_10.h5  _critic_12.h5  _critic_15.h5  _critic_20.h5  _critic_3.h5  _critic_5.h5  _critic_6.h5  _critic_9.h5  checkpointActor0.h5  checkpointCritic0.h5  replay_buffer_6_6.pkl
models/: first_5_5130.h5  first_ex_model_10.h5  first_ex_model_100.h5  first_ex_model_150.h5  first_ex_model_200.h5  first_ex_model_5.h5  first_ex_model_50.h5  model1.h5  model2.h5  second_ex_model_100.h5  second_ex_model_150.h5  second_ex_model_200.h5  second_ex_model_50.h5  test2.h5  test3.h5  test4.h5  test6.h5  third_ex_model_100.h5  third_ex_model_150.h5  third_ex_model_200.h5  third_ex_model_250.h5  third_ex_model_300.h5  third_ex_model_350.h5  (+1 more)
src/: actor.py  (+12 more)
supreme-hex/self-play/: Cargo.toml  build.sh
supreme-hex/self-play/src/: encoder.rs  hex.rs  lib.rs  mcts.rs  python.rs  runtime.rs
(+33 files in other folders)
