[package]
name = "self-play"
version = "0.1.0"
authors = ["Aksel Borgen <akselborgen@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "self_play"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1

# Note: We need the tensorflow .dylib to be in e.g. /usr/local/bin for the library to work
[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"

# Use tensorflow_gpu if a compatible gpu is available!
tensorflow = "0.16.1"
# tensorflow = { version = "0.16.1", features = ["tensorflow_gpu"] }

ordered-float = "2.1.1"
itertools = "0.10.0"
simplelog = "^0.10.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
# Used for Dirichlet. Rand must match.
statrs = "0.13.0"
rand = "^0.7"


# Due to a bug in pyo3, benchmarks must be run as cargo bench --no-default-features
[dependencies.pyo3]
version = "0.13.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]